--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "animejs": "^3.2.1",
     "autoprefixer": "^10.2.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
@@ -31,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "framer-motion": "^3.3.0",
     "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.4",
@@ -45,6 +47,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "react": "^17.0.1",
