--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@wordpress/i18n": "^3.18.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
